syntax = "proto3";

package agencias;

service AgenciasService {
  rpc CreateAgencia (CreateAgenciaRequest) returns (Agencia) {}
  rpc GetAgencia (GetAgenciaRequest) returns (Agencia) {}
  rpc ListAgencias (ListAgenciasRequest) returns (ListAgenciasResponse) {}
  rpc UpdateAgencia (UpdateAgenciaRequest) returns (Agencia) {}
  rpc DeleteAgencia (DeleteAgenciaRequest) returns (DeleteAgenciaResponse) {}
}

message Agencia {
  string id = 1;
  string name = 2;
  string address = 3;
  string ruc = 4;
  string created_at = 5;
}

message CreateAgenciaRequest {
  string name = 1;
  string address = 2;
  string ruc = 3;
}

message GetAgenciaRequest {
  string id = 1;
}

message ListAgenciasRequest {
  int32 page = 1;
  int32 limit = 2;
}

message ListAgenciasResponse {
  repeated Agencia agencias = 1;
  int32 total = 2;
}

message UpdateAgenciaRequest {
  string id = 1;
  string name = 2;
  string address = 3;
  string ruc = 4;
}

message DeleteAgenciaRequest {
  string id = 1;
}

message DeleteAgenciaResponse {
  bool success = 1;
}